# gd32vf103_std_periph

./: .gitmodules  CMakeLists.txt  README.md
include/peripheral/: gd32vf103_rcu.h
src/peripheral/: gd32vf103_bkp.c  gd32vf103_can.c  gd32vf103_eclic.c  gd32vf103_gpio.c  gd32vf103_i2c.c  gd32vf103_pmu.c
src/system/: system_gd32vf103.c
